# mlops-du

./: .gitignore  GEMINI.md  README.md  Taskfile.yml  install-tools.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
assignments/fastapi-movie/: Dockerfile  README.md  pyproject.toml
assignments/fastapi-movie/src/: main.py
assignments/fastapi-movie/src/ml/: __init__.py
assignments/fastapi-movie/src/schemas/: pydantic_models.py
assignments/fastapi-movie/src/utils/: constants.py  kaggle.py  middleware.py
assignments/movie-sentiment/: Dockerfile  README.md  pyproject.toml
assignments/movie-sentiment-aws/: .env  .env.example  .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  config.yaml  docker-compose.yml  pyproject.toml
assignments/movie-sentiment-aws/assets/scripts/: evaluator.py
assignments/movie-sentiment-aws/src/core/: __init__.py  aws.py  base_logger.py  load_config.py  logging_config.py
assignments/movie-sentiment-aws/src/fastapi_backend/: Dockerfile  main.py
assignments/movie-sentiment-aws/src/fastapi_backend/utils/: middleware.py  model_loader.py  schemas.py
assignments/movie-sentiment-aws/src/sklearn_training/: Dockerfile  data_loader.py  initialize_model.py  train_model.py
assignments/movie-sentiment-aws/src/streamlit_frontend/: Dockerfile  app.py
assignments/movie-sentiment-aws/src/streamlit_monitoring/: Dockerfile  app.py  data_loader.py
assignments/movie-sentiment-aws/src/streamlit_monitoring/utils/: data_loader.py
assignments/movie-sentiment-aws/src/utils/: __init__.py  config.py  constants.py  prediction_logger.py
assignments/movie-sentiment-aws/terraform/: cloudwatch.tf  ec2.tf  providers.tf  s3.tf  security_groups.tf  variables.tf
assignments/movie-sentiment-aws/tests/: conftest.py  test_fastapi_backend.py  test_sklearn_training.py  test_streamlit_frontend.py  test_streamlit_monitoring.py
assignments/movie-sentiment-fastapi/: Dockerfile  README.md  pyproject.toml
assignments/movie-sentiment-fastapi/assets/docs/: INSTRUCTIONS.MD
assignments/movie-sentiment-fastapi/src/ml/: initialize_model.py  train_model.py
assignments/movie-sentiment-fastapi/src/schemas/: __init__.py
assignments/movie-sentiment-fastapi/src/utils/: __init__.py  logger.py
assignments/movie-sentiment-streamlit/: Dockerfile  README.md  pyproject.toml
assignments/movie-sentiment-streamlit/assets/models/: sentiment_model.pkl
assignments/movie-sentiment-streamlit/src/train/: train_model.py
assignments/movie-sentiment/src/: main.py
assignments/movie-sentiment/src/streamlit/: app.py
assignments/movie-sentiment/src/train/: train_model.py
assignments/movie-sentiment/src/utils/: __init__.py
movie-sentiment/: .gitignore  README.md  pyproject.toml  requirements.txt
movie-sentiment/src/streamlit/: app.py
movie-sentiment/src/train/: train_model.py
movie-sentiment/src/utils/: __init__.py
