[project]
name = "mlops-du"
version = "0.1.0"
description = "MLOps course assignments monorepo"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["assignments/*"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.12.0",
    "pytest>=8.4.1",
    "pytest-mock",
    "pytest-asyncio",
    "httpx"
]
