[project]
name = "movie-sentiment-aws"
version = "0.1.0"
description = "Serving a sentiment analysis model via FastAPI/Streamlit and deployed on AWS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pyyaml",
    "boto3",
]

[project.optional-dependencies]
training = [
    "scikit-learn",
    "pandas",
    "kagglehub",
    "joblib",
]
backend = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "pandas",
    "joblib",
]
frontend = [
    "streamlit",
]
dev = [
    "ruff>=0.12.0",
]

[tool.setuptools]
packages = ["src"]
