[project]
name = "movie-sentiment"
version = "0.1.0"
description = "Training and serving a sentiment analysis model for movie reviews."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
]

[tool.setuptools]
packages = ["src"]